# Belcher-AI-Final-Project-Delb-Druzz-Arathai-Stevenhere

./: .gitignore  DEMO_SCRIPT.md  LICENSE  README.md  VALIDATION.md  config.example.json  install.sh  piflow.service  pyproject.toml  requirements.txt  run_camera.sh  run_demo.sh  stock_bot.py
src/piflow/: __init__.py  cli.py  config.py  doctor.py  gpio.py  logic.py  models.py  output.py  parser.py  providers.py
tests/: test_logic.py  test_parser.py
